# golem

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  screen.py
autominer/: exceptions.py  letters.py  screen.py
golem/: client.py  entrypoint.py  letters.py  screen.py
golem/minecraft/: minecraft.py  proto.py  screen.py
